tdf#103976 DOCX import: disable incomplete w:before/afterLines style handling

Regression from commit 9e7eb63989ef1cf4b9a0e0404b84ef890db3d8e3 (DOCX
import: parse <w:spacing>'s w:before/afterLines attribute, 2014-10-17),
the problem is that OOXML has 3 different attributes for the paragraph
bottom margin (and other 3 for the top one), while in Writer we just
have a top margin.

Now the import filter tries to work out which one of these should have
priority and ignore the rest, but this is way more complicated when
style inheritance has to be taken into account as well.

To avoid the regression just restrict w:before/afterLines handling for
the case when it's used as direct formatting, that's why this was
introduced after all.

(cherry picked from commit 353a45aa1b1a15047aa2a92c1383996070e87405)

Change-Id: Ie8642c7a9771596def6b8899e098b26c4f8be0b4